# mita

./: .env  .gitignore  App.toml  Cargo.toml  Dockerfile  README.md  deno.jsonc  docker-compose.yml  fly.toml
.github/workflows/: ci.yml  fly.yml
config/: base.toml  dev.toml  production.toml
crates/mita/: Cargo.toml
crates/mita-config/: Cargo.toml
crates/mita-config/src/: lib.rs
crates/mita-moodle/: Cargo.toml
crates/mita-moodle/src/: client.rs  error.rs  json_response.rs  lib.rs  token.rs
crates/mita-vault/: Cargo.toml
crates/mita-vault/src/: client.rs  error.rs  lib.rs
crates/mita/src/: app_state.rs  config.rs  entrypoint.rs  lib.rs  main.rs  telemetry.rs
crates/mita/src/domain/: mod.rs  moodle_token.rs
crates/mita/src/middlewares/: mod.rs  moodle.rs  vault.rs
crates/mita/src/moodle/: json_response.rs  mod.rs  token.rs
crates/mita/src/routes/: get_tokens.rs  mod.rs  put_token.rs  router.rs
crates/mita/src/routes/api/v1/: router.rs
crates/mita/src/routes/api/v1/token/: put.rs
crates/mita/src/routes/info/: get.rs
crates/mita/src/routes/token/: put.rs
crates/mita/src/routes/user/: mod.rs
crates/mita/src/vault/: mod.rs
crates/mita/tests/: login.rs  oauth2.rs
crates/mita/tests/helper/: mod.rs  oauth2.rs  test_app.rs
db/migrations/: 20230221072907_new_users_table.sql
scripts/: init_vault.nu  init_vault.sh  moodle.ts  put_token.ts
src/: main.rs
src/routes/: mod.rs
