[package]
name = "mita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.7", default-features = false, features = [
    "http2",
    "json",
    "tokio",
    "http1",
] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
tokio = { version = "1.25.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
    "fmt",
] }
