[workspace]
members = ["crates/*"]
default-members = ["crates/mita"]

[workspace.dependencies]
async-trait = "0.1.66"
eyre = "0.6.8"
reqwest = { version = "0.11.14", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
url = { version = "2.3.1", features = ["serde"] }
wiremock = "0.5.17"
claims = "0.7.1"
proptest = "1.1.0"
