[package]
name = "mita-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { workspace = true }
figment = { version = "0.10.8", features = ["toml", "env"] }
reqwest = { workspace = true }
serde = { workspace = true }
