[package]
name = "mita-moodle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
eyre = { workspace = true }
hex = "0.4.3"
mita-config = { version = "0.1.0", path = "../mita-config" }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-enum-str = "0.3.2"
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
