[package]
name = "mita-vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
eyre = "0.6.8"
mita-moodle = { version = "0.1.0", path = "../mita-moodle" }
mita-config = { version = "0.1.0", path = "../mita-config" }
reqwest = "0.11.14"
secrecy = "0.8.0"
serde = "1.0.153"
thiserror = "1.0.39"
tracing = "0.1.37"
url = "2.3.1"
serde_json = "1.0.94"
