[package]
name = "mita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.7", features = ["form"] }
eyre = "0.6.8"
hex = "0.4.3"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
claims = "0.7.1"
fake = "2.5.0"
proptest = "1.1.0"
rand = "0.8.5"
