[package]
name = "mita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
axum = { version = "0.6.10", features = ["form", "macros"] }
axum-auth = { version = "0.4.0", default-features = false, features = [
    "auth-bearer",
] }
color-eyre = "0.6.2"
eyre = { workspace = true }
futures = "0.3.26"
mita-config = { version = "0.1.0", path = "../mita-config" }
mita-moodle = { version = "0.1.0", path = "../mita-moodle" }
mita-vault = { version = "0.1.0", path = "../mita-vault" }
once_cell = "1.17.1"
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "util"] }
tracing = { workspace = true }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
claims = { workspace = true }
fake = "2.5.0"
proptest = { workspace = true }
rand = "0.8.5"
wiremock = { workspace = true }
jsonwebtoken = "8.2.0"
